# blog

./: .flake8  .gitignore  .gitmodules  Cargo.toml  README.md  STIGLER.F  conftest.py  environment.yml  meson.build  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: deploy.yml  pythonpackage.yml
TinyBasic/: Makefile  asconfig.json  assembler.py  index.html  package.json  worker.js
TinyBasic/assembly/: index.ts
aioutils/: asyncify.py
aoc2024/: day1.py  day10.py  day11.py  day12.py  day12input.txt  day13.py  day13input.txt  day14.py  day15.py  day16.py  day17.py  day18.py  day18input.txt  day19.py  day2.py  day20.py  day20input.txt  day21.py  day22.py  day22input.txt  day23.py  day24.py  day24input.txt  day25.py  day3.py  day4.py  day5.py  day6.py  day6input.txt  day7.py  day8.py  day9.py  day9input.txt
aoc2025/: day1.py  day10.py  day10input.txt  day11.py  day12.py  day12input.txt  day12troll.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day7input.txt  day8.py  day9.py  day9input.txt
assets/: Makefile  jonesforth.f  package.json  rolldown.config.js  thug-life.js  tsconfig.json  tsdown.config.ts  tsup.config.ts
foo.bar/: access_codes.py  bomb_baby.py  bunnies_escape.py  expanding_nebula.py  guard_fight.py
foo/bar/: bunnies_escape.py  running_with_bunnies.py
forth/: 4th.32.fs  4th.c  5th.c  5th.test.ts  5th.zig  6th.zig  Cargo.toml  Makefile  build.zig  combination.py  comparison.rs  forth.py  jansforth.c  jansforth.py  jansforth.rs  package-lock.json  package.json  test_4th.py  test_4th_wasm.py  wasm-test.ts
forth/5th-opt/: README.md  chat.md  env-ip-sp-rsp.diff  env-sp-ip-rsp.diff  ip-env-sp-rsp.diff  ip-sp-env-rsp.diff  ip-sp-rsp-env.diff  rsp-ip-sp-env.diff  rsp-sp-ip-env.diff  sp-rsp-ip-env.diff  summary.txt  target+1-ip-sp-rsp.diff  target-ip-sp-rsp.diff
forth/html/: 4th.html  5th.html  6th.html
forth/src/: main.rs
forth/wasm/: dictionary.py  jonesforth.wast  localize.wast  main.js  number.wat  tabulate.wast  word.wast  worker.js  worth.wat
fourt2py/: FOURT.F  fourt.pyf  meson.build  setup.py  test_fourt.py
fun/: 4th.32.fs  4th.c  4th.fs  4th.html  4th.server.py  4th.sw.js  4th.worker.js  5th.c  5th.html  5th.sw.js  5th.worker.js  5th.zig  Makefile  _select.py  affine.jl  affine.py  anagram.py  api_from.py  api_from_package.py  assemble.py  awslayer.py  bf.zig  build.zig  challenge.py  codebuilder.py  combination.py  dag.py  fibonacci.fs  fixes.f  forth.py  html_elements.py  intern.py  linear.py  linop.py  lisp.mjs  matrix.zig  meson.build  multiplication_table.py  nbody.jl  nbody.py  (+12 more)
html/: attack.html  html.py
linear_programming/: affine.py  linear.py  linop.py  meson.build
linprog/: affine.py  allocation_ampl.ipynb  linear.py  linop.py  meson.build
lisp/: asconfig.json  index.html  package.json  sw.js  worker.js
lisp/assembly/: index.ts
lisp/tests/: index.js
notebooks/: Black-Scholes.ipynb  DataFrame Formatting.ipynb  Fake Bokeh Server Colab.ipynb  Fake Bokeh Server.ipynb  dataframe_formatting.py  nbody.py
progress/: __init__.py  binding.pyi  binding.zig  build.zig  build.zig.zon  meson.build  test_progress.py
progress/src/: __init__.py  binding.zig
regexp/: bytecode.c  regexp.py  regexp.zig  x86.c
simplex/: SMPLX.F  meson.build  simplex.py  smplx.py  smplx.pyf  test_smplx.py
src/: lib.rs
sudoku/: bitsudoku.py  meson.build  sudoku.py
talks/: fibonacci.py  fibonacci.zig  pydust.html  pydust.md  zorth.html  zorth.md
