[build-system]
requires = ["meson-python", "ninja", "numpy", "ziglang"]
build-backend = "mesonpy"

[project]
name = "blog"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
]

[dependency-groups]
dev = [
    "ampl-module-base>=20250901",
    "ampl-module-highs>=20251015",
    "amplpy>=0.15.2",
    "interpreters-pep-734",
    "jupyter>=1.1.1",
    "matplotlib",
    "pandas",
    "pandas-stubs",
    "pytest",
    "pytest-github-report",
    "pytest-playwright-asyncio",
    "scipy",
    "scipy-stubs",
    "sqlalchemy",
    "sqlalchemy[mypy]",
    "sympy",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
asyncio_default_test_loop_scope = "session"

[[tool.uv.index]]
url = "https://pypi.ampl.com/"

[tool.ruff]
exclude = [
    ".venv",
    "emsdk-cache",
]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pyright]
venv = ".venv"
venvPath = "."
exclude = [
    ".venv",
    "emsdk-cache",
]
