[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wasm-runner"
version = "0.1.0"
requires-python = ">=3.7"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]

[[tool.uv.index]]
url = "https://pypi.ampl.com/"

[tool.ruff]
exclude = [
    ".venv",
    "emsdk-cache",
]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pyright]
venv = ".venv"
venvPath = "."
exclude = [
    ".venv",
    "emsdk-cache",
]

[tool.ty.src]
exclude = [
    "emsdk-cache",
    "**/*.ipynb",
]
