py.install_sources([
    '__init__.py',
    'anagram.py',
    'api_from.py',
    'challenge.py',
    'dag.py',
    'html_elements.py',
    'multiplication_table.py',
    'nbody.py',
    'oecd.py',
    'prechelt.py',
    'regexp.py',
    'serve.py',
    'store_sa.py',
    'store.py',
    'test_interpreters.py',
    'vectorize.py',
    ],
    pure : true,
    subdir : 'fun',
)